--- a/orthodocs/artifacts/256x256/Makefile
+++ b/orthodocs/artifacts/256x256/Makefile
@@ -1,4 +1,5 @@
-# include *.deps
+# explicit wildcard expansion suppresses errors when no files are found
+include $(wildcard *.deps) $(FUNCTIONS)
 
 SIZE		:= $(notdir $(CURDIR))
 CURR_BASE	:= $(notdir $(CURDIR:/$(SIZE)=))
@@ -8,8 +9,6 @@ CMD			:= $(SCAD) --hardwarnings --imgsize $(subst x,$(COMMA),$(SIZE)) --projecti
 top:
 	@$(MAKE) -C $(realpath ../../..) orthodocs/artifacts/256x256/all
 
-include $(FUNCTIONS)
-
 all:	$(PICTURES)
 
 clean:
@@ -17,55 +16,55 @@ clean:
 
 fig-FL_TSP_E1515.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E2020.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E2020t.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E2040.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E2060.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E2080.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E3030.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E3060.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E4040.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E4040t.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
 
 fig-FL_TSP_E4080.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
-	$(CMD)  -d $(@:.png=.deps) --p $(word 2,$^) --P $(@:.png=) -o $@ --ofl-script $<
+	$(call make-picture,$(SIZE),$(call make-camera,0,0,0,0,0,0,200),ortho,--viewall --view axes)
 	$(call target-epilogue-success)
