--- a/docker/ubuntu/Dockerfile
+++ b/docker/ubuntu/Dockerfile
@@ -36,6 +36,7 @@ RUN python3 -m venv .venv \
     && pip install --upgrade pip \
     && pip install -r pyreqs.txt
 COPY make-import.sh /usr/local/sbin/
+# this command is mandatory for the 'git checkout' from inside the container
 RUN git config --global --add safe.directory /import
 ###############################################################################
 # entrypoint
