Aligned .conf to .scad test source

--- a/tests/artifacts/spacer-test.conf
+++ b/tests/artifacts/spacer-test.conf
@@ -130,8 +130,9 @@ fl_spacer(verbs,spacer,thick=thickness,anchor=anchor,fillet=FILLET,octant=octant
      * surfaces.
      */
     translate(\$spc_director*(\$spc_thick))
-      let(l=1.5*fl_spc_d(spacer))
-        fl_cube(size=[l,l,\$spc_thick],octant=-\$spc_director,\$FL_ADD=\$FL_LAYOUT);
+      if (\$spc_thick)
+        let(l=1.5*fl_spc_d(spacer))
+          fl_cube(size=[l,l,\$spc_thick],octant=-\$spc_director,\$FL_ADD=\$FL_LAYOUT);
   else if (\$spc_verb==FL_MOUNT) // SCREW MOUNT
     let(
       htyp    = screw_head_type(screw),
