fl_screw_l(), fl_screw_lens() and fl_screw{} now use a context parameter $fl_thickness in place of the normal thick parameter

--- a/tests/artifacts/pcb_holder-test.conf
+++ b/tests/artifacts/pcb_holder-test.conf
@@ -116,6 +116,6 @@ fl_pcbHolder(verbs,pcbh,thick=thickness,lay_direction=dirs,fillet=FILLET,asm_all
     let(
       htyp    = screw_head_type(\$pcbh_screw),
       washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? \"no\" : \"nylon\"
-    ) fl_screw(FL_DRAW,\$pcbh_screw,thick=\$spc_thickness,washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);
+    ) fl_screw(FL_DRAW,\$pcbh_screw,\$fl_thickness=\$spc_thickness,washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);
   else echo(\$pcbh_verb=\$pcbh_verb);
 "
