--- a/tests/artifacts/spacer-test.conf
+++ b/tests/artifacts/spacer-test.conf
@@ -137,5 +137,5 @@ fl_spacer(verbs,spacer,thick=thickness,anchor=anchor,fillet=FILLET,octant=octant
     let(
       htyp    = screw_head_type(screw),
       washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? \"no\" : \"nylon\"
-    ) fl_screw(FL_DRAW,screw,thick=\$spc_thickness,washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);
+    ) fl_screw(FL_DRAW,screw,\$fl_thickness=\$spc_thickness,washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);
 "
