--- a/tests/foundation/polymorphic-test.conf
+++ b/tests/foundation/polymorphic-test.conf
@@ -95,7 +95,7 @@ module engine(thick) let(
     assert(is_num(thick))
     if (thick)
       iec_screw_positions(nop)
-        fl_screw(FL_DRILL,screw,thick=thick);
+        fl_screw(FL_DRILL,screw,\$fl_thickness=thick);
 
   } else if (\$this_verb==FL_LAYOUT) {
     translate(+Z(iec_flange_t(nop)))
