Fixed misalignment between conf(s) and test(s)

--- a/tests/vitamins/hd-test.conf
+++ b/tests/vitamins/hd-test.conf
@@ -79,8 +79,6 @@ Rail_z   = [0,0];  // [0:0.1:10]
 
 /* [ Hard Disk ] */
 
-SHOW_CONNECTORS = false;
-
 // FL_DRILL tolerance (fl_JNgauge=0.15mm)
 DRI_TOLERANCE   = 0.15;
 // faces to be used during children layout
@@ -104,6 +102,6 @@ hd_ctor = fl_connectors(hd)[0];
 lay_dir = fl_3d_AxisList(LAY_DIRECTION);
 fl_trace(\"lay_dir\",lay_dir);
 
-fl_hd(verbs,hd,dri_tolerance=DRI_TOLERANCE,thick=T,lay_direction=lay_dir,add_connectors=SHOW_CONNECTORS,dri_rails=rail,direction=direction,octant=octant)
+fl_hd(verbs,hd,dri_tolerance=DRI_TOLERANCE,thick=T,lay_direction=lay_dir,dri_rails=rail,direction=direction,octant=octant)
   fl_cylinder(h=\$hd_screw_len,d=\$hole_d,direction=\$hole_direction,octant=-Z);
 "
