--- a/tests/vitamins/sata-test.conf
+++ b/tests/vitamins/sata-test.conf
@@ -55,7 +55,6 @@ TAB_Verbs="
 
 TAB_TEST="
 /* [Sata] */
-CONNECTORS  = false;
 PART        = \"data plug\"; // [data plug,power plug,power data plug,power data socket]
 "
 
@@ -68,5 +67,5 @@ type  = PART==\"data plug\"       ? FL_SATA_DATAPLUG
       : PART==\"power data plug\" ? FL_SATA_POWERDATAPLUG
       : FL_SATA_POWERDATASOCKET;
 
-fl_sata(verbs,type,connectors=CONNECTORS,octant=octant,direction=direction);
+fl_sata(verbs,type,octant=octant,direction=direction);
 "
