Fixed misalignment between conf(s) and test(s)

--- a/tests/vitamins/sata-adapter-test.conf
+++ b/tests/vitamins/sata-adapter-test.conf
@@ -48,16 +48,10 @@ TAB_Verbs="
 # DIR_R       = 0;        // [-360:360]
 # "
 
-TAB_TEST="
-/* [SATA Adapter] */
-
-CONNECTORS  = false;
-"
-
-
+# TAB_TEST=""
 
 TEST_CODE="
 verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX]);
 
-sata_adapter(verbs,FL_SADP_ELUTENG,locators=CONNECTORS,octant=octant,direction=direction);
+sata_adapter(verbs,FL_SADP_ELUTENG,octant=octant,direction=direction);
 "
