Fixed misalignment between conf and test

--- a/tests/vitamins/sata-test.conf
+++ b/tests/vitamins/sata-test.conf
@@ -56,6 +56,7 @@ TAB_Verbs="
 TAB_TEST="
 /* [Sata] */
 PART        = \"data plug\"; // [data plug,power plug,power data plug,power data socket]
+CONNECT     = false;
 "
 
 
@@ -66,6 +67,13 @@ type  = PART==\"data plug\"       ? FL_SATA_DATAPLUG
       : PART==\"power plug\"      ? FL_SATA_POWERPLUG
       : PART==\"power data plug\" ? FL_SATA_POWERDATAPLUG
       : FL_SATA_POWERDATASOCKET;
+counter_type =
+  PART==\"power data plug\"   ? FL_SATA_POWERDATASOCKET :
+  PART==\"power data socket\" ? FL_SATA_POWERDATAPLUG   :
+  undef;
 
 fl_sata(verbs,type,octant=octant,direction=direction);
+if (counter_type && CONNECT)
+  fl_connect(son=[counter_type,0], parent=[type,0])
+    fl_sata(verbs,\$con_child,\$FL_ADD=\"DEBUG\");
 "
