--- a/tests/vitamins/sata-test.conf
+++ b/tests/vitamins/sata-test.conf
@@ -56,6 +56,7 @@ TAB_Verbs="
 TAB_TEST="
 /* [Sata] */
 PART        = \"data plug\"; // [data plug,power plug,power data plug,power data socket]
+// connect composite plug or socket
 CONNECT     = false;
 "
 
@@ -74,6 +75,5 @@ counter_type =
 
 fl_sata(verbs,type,octant=octant,direction=direction);
 if (counter_type && CONNECT)
-  fl_connect(son=[counter_type,0], parent=[type,0])
-    fl_sata(verbs,\$con_child,\$FL_ADD=\"DEBUG\");
-"
+  fl_connect(son=[counter_type,0], parent=[type,0], octant=octant,direction=direction)
+    fl_sata(verbs,\$con_child);"
