--- a/tests/artifacts/tnut-test.conf
+++ b/tests/artifacts/tnut-test.conf
@@ -24,6 +24,12 @@ TAB_Verbs="
 // mount shape through predefined screws
 \$FL_MOUNT     = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
+
+TAB_Dimensions="
+/* [Dimension Lines] */
+VIEW_TYPE     = \"other\";    // [other,right,top,bottom,left,front,back]
+DIM_MODE      = \"full\";     // [full,label,value,silent]"
+
 TAB_TEST="
 /* [T-slot nut] */
 
@@ -44,7 +50,9 @@ knut                  = false;
 DRILL_THICKNESS       = 10; // [0:1:20]
 "
 TEST_CODE="
-screw = fl_switch(screw_name,[
+\$vpr      = fl_view(VIEW_TYPE);
+\$dim_mode = DIM_MODE;
+screw     = fl_switch(screw_name,[
   [\"M3_cap_screw\", M3_cap_screw],
   [\"M4_cap_screw\", M4_cap_screw],
   [\"M5_cap_screw\", M5_cap_screw],
