--- a/tests/artifacts/caddy-blob-test.conf
+++ b/tests/artifacts/caddy-blob-test.conf
@@ -98,15 +98,13 @@ module blob(
                         // example:
                         // thick=[[\"+X\",2.5],[\"-Z\",5]]
                         // thick=2.5
-  direction,            // desired direction [director,rotation], native direction when undef ([+X+Y+Z])
   octant,               // when undef native positioning is used
+  direction             // desired direction [director,rotation], native direction when undef ([+X+Y+Z])
 ) {
   assert(is_list(verbs)||is_string(verbs),verbs);
 
   bbox  = fl_bb_corners(type);
   size  = fl_bb_size(type);
-  D     = direction ? fl_direction(direction)  : FL_I;
-  M     = fl_octant(octant,bbox=bbox);
 
   module do_add() {}
   module do_bbox() {}
@@ -114,7 +112,7 @@ module blob(
   module do_layout() {}
   module do_drill() {}
 
-  fl_manage(verbs,M,D)  {
+  fl_vloop(verbs,bbox,octant,direction) {
     if (\$verb==FL_ADD) {
       fl_modifier(\$modifier) fl_cube(size=size,octant=O0);
 
