fixed misealigned configs

--- a/tests/foundation/polymorphic-test.conf
+++ b/tests/foundation/polymorphic-test.conf
@@ -1,4 +1,4 @@
-TEST_DESCRIPTION="fl_polymorph{} usage example, implementing a NopSCADlib IEC wrapper engine."
+TEST_DESCRIPTION="fl_vmanage{} usage example, implementing a NopSCADlib IEC wrapper engine."
 
 TEST_TEMPLATE="template-3d.scad"
 
@@ -8,10 +8,7 @@ TEST_INCLUDES="
 include <../../lib/ext/NopSCADlib/core.scad>
 include <../../lib/ext/NopSCADlib/vitamins/iecs.scad>
 
-include <../../lib/OFL/vitamins/screw.scad>
-
-use <../../lib/OFL/foundation/polymorphic-engine.scad>
-"
+include <../../lib/OFL/vitamins/screw.scad>"
 
 # TAB_PARAMETERS="
 # \$fn            = 50;           // [3:100]
@@ -120,7 +117,7 @@ iec = let(
   fl_engine(value=\"iec\"),
 ];
 
-fl_polymorph(verbs,iec,octant=octant,direction=direction)
+fl_vmanage(verbs,iec,octant=octant,direction=direction)
   engine(thick=T)
     fl_cylinder(h=10,r=screw_radius(\$iec_screw),octant=-Z);
 "
