--- a/tests/artifacts/caddy-blob-test.conf
+++ b/tests/artifacts/caddy-blob-test.conf
@@ -148,7 +148,7 @@ module blob(
         translate([size.x/2,size.y/2,0])
           fl_cylinder(h=thick.z[0],r=3,octant=-Z);
     } else {
-      assert(false,str(\"***UNIMPLEMENTED VERB***: \",\$verb));
+      fl_error([\"unimplemented verb\",\$this_verb]);
     }
   }
 }
