--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Docker image pull, document and test
         if: steps.docker.outputs.changed=='no'
         run: |
-          make -s clean
+          docker run -v .:/import:Z --rm ${DOCKER_IMAGE} clean
           docker run -v .:/import:Z --rm ${DOCKER_IMAGE}
           docker run -v .:/import:Z --rm ${DOCKER_IMAGE} tests/runs
           docker run -v .:/import:Z --rm ${DOCKER_IMAGE} examples/runs
@@ -135,7 +135,7 @@ jobs:
       - name: Docker image pull, document and test
         if: steps.docker.outputs.changed=='no'
         run: |
-          make -s clean
+          docker run -v .:/import --rm ${DOCKER_IMAGE} clean
           docker run -v .:/import --rm ${DOCKER_IMAGE}
           docker run -v .:/import --rm ${DOCKER_IMAGE} tests/runs
           docker run -v .:/import --rm ${DOCKER_IMAGE} examples/runs
