--- a/orthodocs/vitamins/256x256/Makefile
+++ b/orthodocs/vitamins/256x256/Makefile
@@ -9,19 +9,13 @@ fig_FL_IEC_320_C14_SWITCHED_FUSED_INLET.png fig_FL_IEC_INLET.png fig_FL_IEC_INLE
 fig_FL_IEC_INLET_ATX2.png fig_FL_IEC_YUNPEN.png fig_FL_IEC_OUTLET.png \
 fig_jack_barrel_default_cutouts.png fig_jack_barrel_preferred_cutouts.png
 
-# $(info $$SOURCES is [${SOURCES}])
-# $(info $$TARGETS is [${TARGETS}])
-
-top:
-	@$(MAKE) -C $(realpath ../../..) orthodocs/vitamins/256x256/all
-
 include $(FUNCTIONS)
 
 all: $(TARGETS)
 
 fig_jack_barrel_default_cutouts.png: $(call test-deps,vitamins/jack)
 	$(call target-prologue)
-	$(call make-picture,$(SIZE),$(make-camera 3.2,0,3,68.3,0,44.5,94.2219),,--view axes)
+	$(call check-picture,$(SIZE),$(make-camera 3.2,0,3,68.3,0,44.5,94.2219),,--view axes)
 	$(call target-epilogue-success)
 
 fig_jack_barrel_preferred_cutouts.png: $(call test-deps,vitamins/jack)
