--- a/tests/artifacts/din_rails-test.conf
+++ b/tests/artifacts/din_rails-test.conf
@@ -83,27 +83,18 @@ TEST_CODE="
 
 \$vpr          = fl_view(VIEW_TYPE);
 \$dim_mode     = DIM_MODE;
-thick         = \$FL_CUTOUT!=\"OFF\" ? CO_T       : undef;
-tolerance     = \$FL_CUTOUT!=\"OFF\" || \$FL_FOOTPRINT!=\"OFF\" ? TOLERANCE  : undef;
+\$fl_thickness = \$FL_CUTOUT!=\"OFF\" ? CO_T       : undef;
+\$fl_tolerance = \$FL_CUTOUT!=\"OFF\" || \$FL_FOOTPRINT!=\"OFF\" ? TOLERANCE  : undef;
 drift         = \$FL_CUTOUT!=\"OFF\" ? CO_DRIFT   : undef;
-p_thick       = thick!=undef && drift!=undef ? thick-drift : undef;
 co_direction  = fl_3d_AxisList(CO_DIRECTION);
 
 verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_CUTOUT,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT]);
 
 single = fl_switch(SHOW,fl_list_pack(fl_dict_names(FL_DIN_TS_INVENTORY),FL_DIN_RAIL_INVENTORY));
 if (single) {
-  fl_DIN_rail(
-    verbs,single(LENGTH,PUNCH),
-    cut_direction=co_direction,cut_thick=p_thick,tolerance=tolerance,cut_drift=drift,
-    octant=octant,direction=direction
-  );
+  fl_DIN_rail(verbs,single(LENGTH,PUNCH),cut_direction=co_direction,cut_drift=drift,octant=octant,direction=direction);
 } else {
   all = [for(constructor=FL_DIN_RAIL_INVENTORY) constructor(LENGTH,PUNCH)];
   fl_layout(axis=+X,gap=3,types=all,\$FL_LAYOUT=\"ON\")
-    fl_DIN_rail(
-      verbs,all[\$i],
-      cut_direction=co_direction,cut_thick=p_thick,tolerance=tolerance,cut_drift=drift,
-      octant=octant,direction=direction
-    );
+    fl_DIN_rail(verbs,all[\$i],cut_direction=co_direction,cut_drift=drift,octant=octant,direction=direction);
 }"
