--- a/examples/snapmaker/Makefile
+++ b/examples/snapmaker/Makefile
@@ -19,5 +19,5 @@ runs: $(PICS)
 clean:
 	$(call aggregate-prologue)
 	@for f in $(PICS) ; do rm -fr $$f; done
-	@rm *.deps
+	@rm -f *.deps
 	$(call aggregate-epilogue)
