--- a/tests/artifacts/din_rails-test.conf
+++ b/tests/artifacts/din_rails-test.conf
@@ -74,8 +74,8 @@ TOLERANCE   = 0;  // [0:0.1:5]
 CO_T  = 2.5;          // [0:0.5:5]
 // translation applied to cutout
 CO_DRIFT = 0; // [-100:0.5:100]
-CO_DIRECTION  = [\"±Z\"];
-"
+// list of cutout directions or \"undef\" for preferred directions only
+CO_DIRECTION  = [\"±Z\"];"
 
 
 
@@ -86,7 +86,7 @@ TEST_CODE="
 \$fl_thickness = \$FL_CUTOUT!=\"OFF\" ? CO_T       : undef;
 \$fl_tolerance = \$FL_CUTOUT!=\"OFF\" || \$FL_FOOTPRINT!=\"OFF\" ? TOLERANCE  : undef;
 drift         = \$FL_CUTOUT!=\"OFF\" ? CO_DRIFT   : undef;
-co_direction  = fl_3d_AxisList(CO_DIRECTION);
+co_direction  = CO_DIRECTION==\"undef\" ? undef : fl_3d_AxisList(CO_DIRECTION);
 
 verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_CUTOUT,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT]);
 
