--- a/tests/artifacts/tprofiles-test.conf
+++ b/tests/artifacts/tprofiles-test.conf
@@ -1,5 +1,6 @@
 TEST_DESCRIPTION="T-slot structural framing tests."
 TEST_INCLUDES="
+include <../../lib/OFL/artifacts/t-nut.scad>
 include <../../lib/OFL/artifacts/t-profiles.scad>
 "
 TAB_Verbs="
@@ -13,35 +14,38 @@ TAB_Verbs="
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a footprint to scene, usually a simplified FL_ADD
 \$FL_FOOTPRINT = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
-"
+// layout of user passed accessories (like alternative screws)
+\$FL_LAYOUT    = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]"
+
 TAB_TEST="
 /* [T Profile] */
 
 PROFILE     = \"E1515\"; // [E1515,E2020,E2020t,E2040,E2060,E2080,E3030,E3060,E4040,E4040t,E4080]
 LENGTH      = 50;
 CORNER_HOLE = false;
+TOLERANCE   = 0.1;  // [0:0.1:1]
 "
 TEST_CODE="
-verbs=[
-  if (\$FL_ADD!=\"OFF\")       FL_ADD,
-  if (\$FL_AXES!=\"OFF\")      FL_AXES,
-  if (\$FL_BBOX!=\"OFF\")      FL_BBOX,
-  if (\$FL_FOOTPRINT!=\"OFF\") FL_FOOTPRINT,
-];
+verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_FOOTPRINT,FL_LAYOUT]);
 
-xsec  = PROFILE==\"E1515\"   ? FL_TSP_E1515
-      : PROFILE==\"E2020\"   ? FL_TSP_E2020
-      : PROFILE==\"E2020t\"  ? FL_TSP_E2020t
-      : PROFILE==\"E2040\"   ? FL_TSP_E2040
-      : PROFILE==\"E2060\"   ? FL_TSP_E2060
-      : PROFILE==\"E2080\"   ? FL_TSP_E2080
-      : PROFILE==\"E3030\"   ? FL_TSP_E3030
-      : PROFILE==\"E3060\"   ? FL_TSP_E3060
-      : PROFILE==\"E4040\"   ? FL_TSP_E4040
-      : PROFILE==\"E4040t\"  ? FL_TSP_E4040t
-      : FL_TSP_E4080;
+xsec  = fl_switch(PROFILE,[
+  [\"E1515\"  ,FL_TSP_E1515   ],
+  [\"E2020\"  ,FL_TSP_E2020   ],
+  [\"E2020t\" ,FL_TSP_E2020t  ],
+  [\"E2040\"  ,FL_TSP_E2040   ],
+  [\"E2060\"  ,FL_TSP_E2060   ],
+  [\"E2080\"  ,FL_TSP_E2080   ],
+  [\"E3030\"  ,FL_TSP_E3030   ],
+  [\"E3060\"  ,FL_TSP_E3060   ],
+  [\"E4040\"  ,FL_TSP_E4040   ],
+  [\"E4040t\" ,FL_TSP_E4040t  ],
+  [\"E4080\"  ,FL_TSP_E4080   ]
+]);
 
-profile = fl_tsp_TProfile(xsec,LENGTH);
+profile = fl_tsp_TProfile(xsec,LENGTH,CORNER_HOLE);
 
-fl_tProfile(verbs,profile,direction=direction,octant=octant);
+fl_tProfile(verbs,profile,lay_surface=[+X],direction=direction,octant=octant,\$fl_tolerance=TOLERANCE)
+  echo(\$tsp_size=\$tsp_size,\$tsp_tabT=\$tsp_tabT)
+  translate(-X(\$tsp_tabT))
+    fl_tnut(type=FL_TNUT_M5_CS,octant=[undef,undef,0],direction=[Z,-90],\$FL_ADD=\$FL_LAYOUT);
 "
