--- a/tests/foundation/connect-test.conf
+++ b/tests/foundation/connect-test.conf
@@ -19,7 +19,7 @@ VIEW_BALL       = true;
 
 /* [Socket] */
 
-// canonical view is solidal with the connector position and orientation
+// canonical view is relative to connector position and orientation
 SOCKET_VIEW     = \"actual\"; // [natural,canonical,actual]
 SOCKET_ALPHA    = 120;      // [0:360]
 SOCKET_BETA     = 30;       // [0:360]
@@ -27,7 +27,7 @@ SOCKET_DISTANCE = 6;        // [0:10]
 
 /* [Plug] */
 
-// canonical view is solidal with the connector position and orientation
+// canonical view is relative to connector position and orientation
 PLUG_VIEW       = \"actual\"; // [natural,canonical,actual]
 "
 
