--- a/tests/foundation/extrusion-test.conf
+++ b/tests/foundation/extrusion-test.conf
@@ -16,9 +16,10 @@ TEST_TEMPLATE="template-3d.scad"
 
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/core.scad>
+include <../../lib/OFL/foundation/unsafe_defs.scad>
 
 use <../../lib/OFL/foundation/3d-engine.scad>
-"
+use <../../lib/ext/NopSCADlib/utils/maths.scad>"
 
 # TAB_PARAMETERS="
 # \$fn            = 50;           // [3:100]
@@ -42,10 +43,10 @@ TAB_Direction=""
 TAB_TEST="
 /* [EXTRUSION] */
 
-EXTRUSION_TYPE  = \"linear\"; // [none,linear,directional]
+// extrusion direction vector
 XTR_AXIS        = [0,0,1];  // [-1:0.1:+1]
-XTR_ROT         = 0;        // [-360:+360]
-DISTANCE        = 30;       // [0:60]
+// extrusion length
+XTR_LENGTH      = 20;        // [0:50]
 
 /* [DIRECTIONAL] */
 OFFSET_TYPE     = \"radial\"; // [radial,delta]
@@ -53,6 +54,9 @@ OFFSET_TYPE     = \"radial\"; // [radial,delta]
 OFFSET_VALUE    = 0;
 // valid only for \"delta\" offset()
 OFFSET_CHAMFER  = false;
+CUT_PLANE         = false;
+// translation BEFORE projection()
+XTR_TRIM        = [0,0,0];
 "
 
 TEST_PROLOGUE="
@@ -61,7 +65,8 @@ fl_status();
 
 TEST_CODE="
 // extrude direction
-xtr_direction = EXTRUSION_TYPE==\"none\" ? undef : [XTR_AXIS,XTR_ROT];
+xtr_direction = [XTR_AXIS,0];
+xtr_trim      = CUT_PLANE ? XTR_TRIM : undef;
 
 module example002() {
   intersection() {
@@ -82,25 +87,49 @@ module example002() {
   }
 }
 
-module extrude(direction,length,convexity = 10) {
-  #if (direction)
-    translate(DISTANCE*direction[0])
-      if (EXTRUSION_TYPE==\"linear\")
-        fl_linear_extrude(direction, length, convexity)
-          projection(cut = false)
-            children();
-      else
-        fl_direction_extrude(
-          xtr_direction,
-          length,
-          convexity,
-          r       = OFFSET_TYPE==\"radial\" ? OFFSET_VALUE : undef,
-          delta   = OFFSET_TYPE==\"delta\"  ? OFFSET_VALUE : undef,
-          chamfer = OFFSET_CHAMFER
-        ) children();
-  children();
+module test(direction,length,trim,cut_plane) {
+  plane_t = 0.1;
+
+  module xy_plane()
+    fl_cube(size=[100,100,plane_t],\$FL_ADD=\"ON\");
+
+  module translate_if(t)
+    if (t)
+      translate(t)
+        children();
+    else
+      children();
+
+  module extrude(length)
+    fl_direction_extrude(
+      [XTR_AXIS,0],
+      length,
+      r       = OFFSET_TYPE==\"radial\" ? OFFSET_VALUE : undef,
+      delta   = OFFSET_TYPE==\"delta\"  ? OFFSET_VALUE : undef,
+      chamfer = OFFSET_CHAMFER,
+      trim    = CUT_PLANE ? trim : undef
+    ) translate_if(CUT_PLANE?undef:XTR_TRIM) // when trimming is on, children translation is already performed by fl_direction_extrude()
+      children();
+
+  // extrusion
+  #translate(fl_versor(XTR_AXIS)*plane_t/2)
+    extrude(XTR_LENGTH)
+      children();
+
+  // cut plane section
+  extrude(length=plane_t)
+    children();
+
+  // children
+  %translate(trim)
+      children();
+
+  // extrusion direction vector
+  fl_color()
+    translate(plane_t*fl_versor(XTR_AXIS))
+      fl_vector(40*XTR_AXIS);
 }
 
-extrude(xtr_direction,1)
+test(xtr_direction,XTR_LENGTH,XTR_TRIM,CUT_PLANE)
   example002();
 "
