--- a/tests/vitamins/usb-test.conf
+++ b/tests/vitamins/usb-test.conf
@@ -93,5 +93,5 @@ if (single)
   fl_USB(verbs,single,direction=direction,octant=octant,cut_thick=thick,cut_direction=dirs,cut_tolerance=tolerance,cut_drift=drift,tongue=COLOR);
 else
   layout([for(socket=FL_USB_DICT) fl_width(socket)], 10)
-    fl_USB(verbs,FL_USB_DICT[\$i],direction=direction,octant=octant,cut_thick=thick,cut_direction=dirs,cut_tolerance=tolerance,cut_drift=drift,tongue=COLOR);
+    fl_USB(verbs,FL_USB_DICT[\$i],direction=direction,octant=octant,cut_thick=thick,cut_dirs=dirs,cut_tolerance=tolerance,cut_drift=drift,tongue=COLOR);
 "
